--- a/static/css/style.css
+++ b/static/css/style.css
@@ -5,6 +5,17 @@ body {
     background-attachment: fixed;
 }
 
+nav {
+    background-color: rgb(201, 125, 12);
+}
+
+.h1 {
+    font-size: 5rem;
+}
+
+.fantasy {
+    font-family: fantasy;
+}
 .jumbotron {
     background: linear-gradient(rgba(10, 10, 82, 0.9), rgba(29, 29, 21, 0.9));
 }
@@ -123,8 +134,8 @@ h1 {
   /* The actual popup (appears on top) */
   .popup .popuptext {
     visibility: hidden;
-    width: 160px;
-    background-color: #555;
+    width: 700px;
+    background-color: rgb(226, 88, 88);
     color: #fff;
     text-align: center;
     border-radius: 6px;
@@ -132,8 +143,8 @@ h1 {
     position: absolute;
     z-index: 1;
     bottom: 125%;
-    left: 50%;
-    margin-left: -80px;
+    left: 10%;
+    margin-left: -300px;
   }
   
   /* Popup arrow */
@@ -141,7 +152,7 @@ h1 {
     content: "";
     position: absolute;
     top: 100%;
-    left: 50%;
+    left: 10%;
     margin-left: -5px;
     border-width: 5px;
     border-style: solid;
